--- a/contact.html
+++ b/contact.html
@@ -1,2 +1,2 @@
-<h1> This is my contact details<h1>
-<h1> This is my email@address3.com <h1>
+<h1> This is my contact details</h1>
+<h1> This is my email@address3.com> </h1>
